--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,7 @@
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~v1.0.0",
-    "px-meta-buttons-design": "git://github.build.ge.com/PXd/px-meta-buttons-design.git#~0.4.0",
+    "px-forms-design": "git://github.build.ge.com/PXd/px-forms-design.git#~0.3.0",
     "px-starter-kit-design": "git://github.build.ge.com/PXd/px-starter-kit-design.git#~0.4.0"
   }
 }
