--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-slider",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "main": [
     "px-slider.html"
   ],
@@ -18,6 +18,7 @@
     "px-theme": "https://github.com/PredixDev/px-theme.git#~0.4.0"
   },
   "devDependencies": {
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#~v1.0.3",
     "iron-component-page": "PolymerElements/iron-component-page#~v1.1.0",
     "px-forms-design": "https://github.com/PredixDev/px-forms-design.git#~0.3.0",
     "px-starter-kit-design": "https://github.com/PredixDev/px-starter-kit-design.git#~0.4.0",
