--- a/bower.json
+++ b/bower.json
@@ -15,10 +15,10 @@
   ],
   "dependencies": {
     "polymer": "~v1.2.3",
-    "px-theme": "https://github.com/PredixDev/px-theme.git#~0.4.0"
+    "px-theme": "https://github.com/PredixDev/px-theme.git#~0.4.0",
+    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#~v1.0.3"
   },
   "devDependencies": {
-    "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#~v1.0.3",
     "iron-component-page": "PolymerElements/iron-component-page#~v1.1.0",
     "px-forms-design": "https://github.com/PredixDev/px-forms-design.git#~0.3.0",
     "px-starter-kit-design": "https://github.com/PredixDev/px-starter-kit-design.git#~0.4.0",
