--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-slider",
-  "version": "0.4.3",
+  "version": "0.5.0",
   "main": [
     "px-slider.html"
   ],
@@ -15,8 +15,8 @@
     "OSS_Notice.pdf"
   ],
   "dependencies": {
-    "polymer": "~v1.4.0",
-    "px-theme": "https://github.com/PredixDev/px-theme.git#~0.7.0",
+    "polymer": "^v1.5.0",
+    "px-theme": "https://github.com/PredixDev/px-theme.git#~0.8.0",
     "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#~v1.0.3"
   },
   "devDependencies": {
