--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "px-slider",
-  "version": "0.5.5",
+  "version": "0.5.6",
   "main": [
     "px-slider.html"
   ],
@@ -30,7 +30,7 @@
     "px-polymer-font-awesome":"^0.1.8",
     "px-tabs": "~0.4.0",
     "px-api-viewer": "~0.0.3",
-    "px-demo-snippet": "~0.0.11",
+    "px-demo-snippet": "^0.1.2",
     "px-toggle-design": "^0.2.12",
     "px-actionable-text-icons-design": "^0.0.3",
     "px-code-design": "^0.2.11",
