--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "px-slider",
   "author": "General Electric",
-  "description": "A Px component",
-  "version": "0.6.0",
+  "description": "Predix UI slider component",
+  "version": "0.6.1",
   "private": true,
   "extName": null,
   "repository": {
