--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,7 @@
     "polymer": "^v1.6.0",
     "px-theme": "^2.0.1",
     "iron-resizable-behavior": "PolymerElements/iron-resizable-behavior#~v1.0.3",
-    "px-tooltip": "^0.10.17",
-    "px-alert-label": "https://github.com/pruthvi-k/px-alert-label/tarball/191239aab9297a7e200f769e2489bdeb9896c664"
+    "px-tooltip": "^0.10.17"
   },
   "devDependencies": {
     "px-starter-kit-design": "^0.7.0",
